Corrected the alignment of NumericView Summary Page

--- a/assets/css/common.css
+++ b/assets/css/common.css
@@ -407,3 +407,12 @@ h4 {
 .clickable{
     cursor: pointer;
 }
+.Row {
+    display: table;
+    width: 100%; 
+    table-layout: fixed; 
+    border-spacing: 10px; 
+}
+.Column {
+    display: table-cell;
+}
